--- a/GameEditor/Base.lproj/MainMenu.xib
+++ b/GameEditor/Base.lproj/MainMenu.xib
@@ -176,21 +176,14 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView identifier="point" id="2Ss-NZ-lOU">
-                                                            <rect key="frame" x="86" y="1" width="198" height="17"/>
+                                                            <rect key="frame" x="86" y="1" width="216" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="6Fk-3f-kkk">
                                                                     <rect key="frame" x="0.0" y="0.0" width="198" height="17"/>
                                                                     <subviews>
-                                                                        <stepper horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="WZK-4b-Rc6">
-                                                                            <rect key="frame" x="-2" y="1" width="13" height="15"/>
-                                                                            <stepperCell key="cell" controlSize="mini" continuous="YES" alignment="left" minValue="-9.2233720368547758e+18" maxValue="9.2233720368547758e+18" id="Z4b-Zt-ieb"/>
-                                                                            <connections>
-                                                                                <binding destination="2Ss-NZ-lOU" name="value" keyPath="objectValue.x" id="hCD-Ad-8L5"/>
-                                                                            </connections>
-                                                                        </stepper>
-                                                                        <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="tOs-8Z-T1g">
-                                                                            <rect key="frame" x="7" y="0.0" width="94" height="17"/>
+                                                                        <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="tOs-8Z-T1g" customClass="TextField">
+                                                                            <rect key="frame" x="-2" y="0.0" width="103" height="17"/>
                                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" alignment="center" title="point" id="5Ah-em-z2L">
                                                                                 <font key="font" metaFont="system"/>
                                                                                 <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -205,12 +198,8 @@
                                                                                 </binding>
                                                                             </connections>
                                                                         </textField>
-                                                                        <stepper horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="MAr-Mw-l5X">
-                                                                            <rect key="frame" x="97" y="1" width="13" height="15"/>
-                                                                            <stepperCell key="cell" controlSize="mini" continuous="YES" alignment="left" maxValue="100" id="hez-Gc-k1b"/>
-                                                                        </stepper>
-                                                                        <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="voO-LH-bcR">
-                                                                            <rect key="frame" x="106" y="0.0" width="94" height="17"/>
+                                                                        <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="voO-LH-bcR" customClass="TextField">
+                                                                            <rect key="frame" x="97" y="0.0" width="103" height="17"/>
                                                                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" id="eGk-WA-UKb">
                                                                                 <font key="font" metaFont="system"/>
                                                                                 <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -219,16 +208,12 @@
                                                                         </textField>
                                                                     </subviews>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="centerY" secondItem="MAr-Mw-l5X" secondAttribute="centerY" id="3cV-Fd-tFD"/>
                                                                         <constraint firstAttribute="trailing" secondItem="voO-LH-bcR" secondAttribute="trailing" id="7Nb-K3-geD"/>
                                                                         <constraint firstAttribute="trailing" secondItem="tOs-8Z-T1g" secondAttribute="trailing" multiplier="2:1" id="BtK-oL-sUd"/>
-                                                                        <constraint firstItem="MAr-Mw-l5X" firstAttribute="trailing" secondItem="voO-LH-bcR" secondAttribute="leading" id="IN6-8d-brd"/>
-                                                                        <constraint firstItem="tOs-8Z-T1g" firstAttribute="trailing" secondItem="MAr-Mw-l5X" secondAttribute="leading" id="MEd-N9-2tQ"/>
-                                                                        <constraint firstItem="WZK-4b-Rc6" firstAttribute="trailing" secondItem="tOs-8Z-T1g" secondAttribute="leading" id="Pm6-dR-g92"/>
-                                                                        <constraint firstItem="WZK-4b-Rc6" firstAttribute="leading" secondItem="6Fk-3f-kkk" secondAttribute="leading" id="UBf-YH-1yr"/>
-                                                                        <constraint firstAttribute="centerY" secondItem="WZK-4b-Rc6" secondAttribute="centerY" id="VEj-yp-9p2"/>
+                                                                        <constraint firstItem="tOs-8Z-T1g" firstAttribute="trailing" secondItem="voO-LH-bcR" secondAttribute="leading" id="ILT-2X-5KF"/>
                                                                         <constraint firstAttribute="centerY" secondItem="tOs-8Z-T1g" secondAttribute="centerY" id="tup-6K-DPc"/>
                                                                         <constraint firstAttribute="centerY" secondItem="voO-LH-bcR" secondAttribute="centerY" id="x2v-og-vvE"/>
+                                                                        <constraint firstItem="tOs-8Z-T1g" firstAttribute="leading" secondItem="6Fk-3f-kkk" secondAttribute="leading" id="yfM-b5-8Ud"/>
                                                                     </constraints>
                                                                 </customView>
                                                             </subviews>
@@ -246,19 +231,8 @@
                                                             <rect key="frame" x="86" y="20" width="198" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <stepper horizontalHuggingPriority="750" verticalHuggingPriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="an0-xg-ycP">
-                                                                    <rect key="frame" x="-2" y="1" width="13" height="15"/>
-                                                                    <stepperCell key="cell" controlSize="mini" continuous="YES" alignment="left" minValue="-9.2233720368547758e+18" maxValue="9.2233720368547758e+18" id="InT-SD-zPt"/>
-                                                                    <connections>
-                                                                        <binding destination="ykA-kB-Fwq" name="value" keyPath="objectValue.propertyValue" id="kPm-HA-UEN">
-                                                                            <dictionary key="options">
-                                                                                <string key="NSValueTransformerName">DegreesTransformer</string>
-                                                                            </dictionary>
-                                                                        </binding>
-                                                                    </connections>
-                                                                </stepper>
-                                                                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fV5-EB-vtf">
-                                                                    <rect key="frame" x="7" y="0.0" width="193" height="17"/>
+                                                                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fV5-EB-vtf" customClass="TextField">
+                                                                    <rect key="frame" x="-2" y="0.0" width="202" height="17"/>
                                                                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" alignment="center" title="degrees" id="PMG-7e-KKm">
                                                                         <numberFormatter key="formatter" formatterBehavior="custom10_4" positiveFormat="#º" negativeFormat="#º" usesGroupingSeparator="NO" lenient="YES" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="2" id="mTx-fL-3tO">
                                                                             <metadata>
@@ -279,11 +253,9 @@
                                                                 </textField>
                                                             </subviews>
                                                             <constraints>
-                                                                <constraint firstItem="an0-xg-ycP" firstAttribute="leading" secondItem="ykA-kB-Fwq" secondAttribute="leading" id="Mru-Df-fyU"/>
+                                                                <constraint firstItem="fV5-EB-vtf" firstAttribute="leading" secondItem="ykA-kB-Fwq" secondAttribute="leading" id="7GM-ko-d8f"/>
                                                                 <constraint firstAttribute="trailing" secondItem="fV5-EB-vtf" secondAttribute="trailing" id="XDd-dN-IB1"/>
-                                                                <constraint firstAttribute="centerY" secondItem="an0-xg-ycP" secondAttribute="centerY" id="bNc-AD-ZbC"/>
                                                                 <constraint firstAttribute="centerY" secondItem="fV5-EB-vtf" secondAttribute="centerY" id="j8u-tG-a4Q"/>
-                                                                <constraint firstItem="an0-xg-ycP" firstAttribute="trailing" secondItem="fV5-EB-vtf" secondAttribute="leading" id="p5O-gC-lFo"/>
                                                             </constraints>
                                                         </tableCellView>
                                                         <tableCellView identifier="bool" id="52C-rc-ywy">
@@ -343,7 +315,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZGu-1S-3o1" customClass="TextField">
-                                <rect key="frame" x="87" y="530" width="96" height="22"/>
+                                <rect key="frame" x="87" y="530" width="96" height="18"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="OUc-Uu-0M4">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -381,14 +353,6 @@
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Att-Fs-ZcA" customClass="TextField">
-                                <rect key="frame" x="87" y="530" width="96" height="22"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="XmU-b4-vHa">
-                                    <font key="font" metaFont="system"/>
-                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
                         </subviews>
                         <constraints>
                             <constraint firstItem="56m-Ws-rUR" firstAttribute="top" secondItem="BAm-0B-vb9" secondAttribute="top" constant="20" symbolic="YES" id="GTK-yR-dP1"/>
@@ -411,7 +375,7 @@
                 <outlet property="_arrayController" destination="MHP-mB-ED2" id="WIV-gD-tYo"/>
                 <outlet property="_pausedButton" destination="wGl-ny-oTz" id="xLR-th-SlE"/>
                 <outlet property="_positionTextField" destination="GNd-ot-ftd" id="Heo-Os-YtE"/>
-                <outlet property="_rotationTextField" destination="Att-Fs-ZcA" id="hBr-uq-jRj"/>
+                <outlet property="_rotationTextField" destination="ZGu-1S-3o1" id="P4U-Q6-dDy"/>
                 <outlet property="_tableView" destination="tum-wb-Po7" id="pz9-7M-hmt"/>
                 <outlet property="skView" destination="BAm-0B-vb9" id="MCo-T6-F5E"/>
                 <outlet property="window" destination="371" id="532"/>
